# CentraldeSensoresBitDog

./: .gitignore  CMakeLists.txt  FreeRTOSConfig.h  LICENSE  README.md  blink_test.c  estilo_academico.css  freertos_test.c  i2c_scanner.c  lwipopts.h  main.c  main_safe_confirmed.c  main_working_superloop.c  rebuild.bat  relatorio_final.md  sensor_data.csv  sensor_test.c  task.md
.cache/clangd/index/: FreeRTOSConfig.h.E6CE4EBD0A2E1225.idx  blink_test.c.F28AA32FDE46F6BA.idx  font.h.8E377BF77742F990.idx  freertos_test.c.FEE48B4AC9809F92.idx  i2c_scanner.c.DFC2BFA0054D7BAB.idx  lwipopts.h.A23AD054D3969852.idx  main.c.39CAC26736D79573.idx  sensor_test.c.578DB5269CF22618.idx  ssd1306.c.3ABF948ABC6903B1.idx  ssd1306.h.8E5D4FB917FDFB26.idx
micropython/: main.py  ssd1306.py
pico-server/: server.py
pico-server/templates/: index.html
